--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,14 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M4</version>
             </plugin>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <fork>true</fork>
+                    <executable>C:\Program Files\Java\jdk1.8.0_241\bin\javac.exe</executable>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <version>1.0-SNAPSHOT</version>
